Updating commands to work with java8