@@ -3,7 +3,7 @@
 # run a jar program in a new directory
 
 jarFile="$1"
-java6fullpath="/usr/lib/jvm/java-6-openjdk-amd64/jre/bin/java"
+javafullpath=$(which java)
 jobName=$(echo $jarFile | sed 's/locoGP-//g' | sed 's/\.jar//g')
 curDir="$(pwd)"
 workingDir="$curDir/$jobName/rep$i-`hostname`-`date +"%Y%m%d%H%M%S"`"
@@ -22,7 +22,7 @@ compressFiles(){
 
 mkdir -p $workingDir
 cd $workingDir
-$java6fullpath -server -Xss32M -Xmx5100M -XX:ReservedCodeCacheSize=1000M -XX:+UseCodeCacheFlushing -XX:MaxPermSize=2000M -XX:+ScavengeBeforeFullGC -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled  -jar $curDir/$jarFile $2 &
+$javafullpath -server -Xss32M -Xmx5100M -XX:ReservedCodeCacheSize=1000M -XX:+UseCodeCacheFlushing -XX:+ScavengeBeforeFullGC -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -jar $curDir/$jarFile $2 &
 pid=$!
 while ps -p $pid > /dev/null
 do
